<resources>
    <string name="app_name">WatchParty - Duo</string>
    <string name="todo">TODO</string>
    <string name="connecting">Connecting...</string>
    <string name="joining">Joining...</string>
    <string name="connect">Connect</string>
    <string name="join">Join</string>
    <string name="image">image</string>
    <string name="timestamp">timestamp</string>
    <string name="friend">Friend</string>
    <string name="deafen_description">It updates deafen status</string>
    <string name="video_btn_description">It updates video status</string>
    <string name="call_btn_description">It ends the call</string>
    <string name="name">Name</string>
    <string name="user_code">User - Code</string>
    <string name="room_code_optional">Room Code (Optional)</string>
    <string name="video_call_settings">Video Call Settings</string>
    <string name="submit">Submit</string>
    <string name="exit_confirmation">Exit Confirmation</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="it_will_reset_option_layout">it will reset option layout</string>
    <string name="archive">Archive</string>
    <string name="celestial">Celestial</string>
    <string name="media_index_mp4">Media: index.mp4</string>
    <string name="play_video">Play Video</string>
    <string name="no_media_selected">No media selected</string>
    <string name="_00_00">00:00</string>
    <string name="slash">/</string>
    <string name="youtube_video_link">YouTube Video Link</string>
    <string name="create_youtube_player">Create YouTube Player</string>
    <string name="create_youtube_player_underlined"><u>Create YouTube Player</u></string>

    <string name="join_youtube_player">Join YouTube Player</string>
    <string name="join_youtube_player_underlined"><u>Join YouTube Player</u></string>
    <string name="play_youtube_player">Play YouTube Player</string>
</resources>